syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.agamotto.cloud.sample.grpc.proto";
option java_outer_classname = "SampleGrpc";

// The greeting service definition.
service SimpleSample {
    // Sends a greeting
    rpc SayHello (SimpleSampleRequest) returns (SimpleSampleReply);
}

// The request message containing the user's name.
message SimpleSampleRequest {
    string name = 1;
}

// The response message containing the greetings
message SimpleSampleReply {
    string message = 1;
}
